# layout_detection

./: CMakeLists.txt  readme.md
include/: predictor.h  utils.h
models/: model_det.onnx
src/: main.cpp  predictor.cpp  utils.cpp
